--- a/build.gradle
+++ b/build.gradle
@@ -9,9 +9,6 @@
 plugins {
     // Apply the java plugin to add support for Java
     id 'java'
-
-    // Apply the application plugin to add support for building a CLI application.
-    id 'application'
 }
 
 repositories {
@@ -20,23 +17,4 @@ repositories {
     jcenter()
 }
 
-dependencies {
-    // This dependency is used by the application.
-    implementation 'com.google.guava:guava:28.2-jre'
-
-    // Use JUnit Jupiter API for testing.
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
-
-    // Use JUnit Jupiter Engine for testing.
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.0'
-}
-
-application {
-    // Define the main class for the application.
-    mainClassName = 'leetcode.App'
-}
-
-test {
-    // Use junit platform for unit tests
-    useJUnitPlatform()
-}
+sourceSets.main.java.srcDirs += ['leetcode']
